add external login

--- a/TodoApp/src/TodoApp/appsettings.json
+++ b/TodoApp/src/TodoApp/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TodoAppDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TodoAppDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
@@ -9,5 +9,11 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+
+  "GoogleAuthSecret": "xxxxx",
+  "GoogleAuthClientId": "xxxxxx"
+
+
+
 }
