--- a/TodoApp/src/TodoApp/project.json
+++ b/TodoApp/src/TodoApp/project.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "EntityFramework": "6.1.3",
     "Microsoft.AspNetCore.Authentication.Cookies": "1.0.0",
+    "Microsoft.AspNetCore.Authentication.Google": "1.1.0",
     "Microsoft.AspNetCore.Diagnostics": "1.0.0",
     "Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore": "1.0.0",
     "Microsoft.AspNetCore.Identity.EntityFrameworkCore": "1.0.0",
